[UPDATE] ピアノロールの高低を逆にし、鍵盤の向きを進行方向に変更 [UPDATE] 鍵盤を半透明にした際に他のオブジェクトが透けて見えるように修正※描画順を変更したため、鍵盤を反対から見た際に不具合有り（波紋のαが適用されない、TimeIndicatorをまたぐと鍵盤が見えない等） [UPDATE] 波紋が輝くように描画方法を変更（DSTにBLEND_ONEで3回上書きしてます） [UPDATE] 波紋・発音色の減衰描画を、実時間ではなくシーケンサの演奏時間を使うように修正 [UPDATE] 波紋・発音色の減衰率を、リニアではなく指数関数的に行なうように修正 [UPDATE] 波紋・発音色の減衰時間を、固定長ではなく発音長を考慮するように修正

--- a/MIDITrail/MIDITrail.rc
+++ b/MIDITrail/MIDITrail.rc
@@ -46,6 +46,7 @@ BEGIN
     POPUP "File"
     BEGIN
         MENUITEM "Open...\tCtrl + O",           IDM_OPEN_FILE
+        MENUITEM "Add...\tCtrl + A",            IDM_ADD_FILE
         MENUITEM "Exit",                        IDM_EXIT
     END
     POPUP "Playback"
@@ -120,7 +121,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     ICON            IDI_MIDITRAIL,IDC_STATIC,74,12,20,20
     CTEXT           "MIDITrail",IDC_STATIC,16,42,138,8,SS_NOPREFIX
-    CTEXT           "Version 1.2.0 mod. yossiepon_20120318",IDC_STATIC,16,63,138,8
+    CTEXT           "Version 1.2.0 mod. yossiepon_20120401",IDC_STATIC,16,63,138,8
     CTEXT           "Copyright (C) 2010-2012 WADA Masashi",IDC_STATIC,1,84,168,8
     DEFPUSHBUTTON   "OK",IDOK,58,108,53,14,WS_GROUP
 END
@@ -294,7 +295,7 @@ END
 
 STRINGTABLE 
 BEGIN
-    IDS_APP_TITLE           "MIDITrail 1.2.0 mod. yossiepon_20120318"
+    IDS_APP_TITLE           "MIDITrail 1.2.0 mod. yossiepon_20120401"
     IDC_MIDITRAIL           "MIDITRAIL"
 END
 
