--- a/MIDITrail/MIDITrail.vcproj
+++ b/MIDITrail/MIDITrail.vcproj
@@ -467,6 +467,14 @@
 					>
 				</File>
 				<File
+					RelativePath=".\MTGridBoxMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTGridBoxMod.h"
+					>
+				</File>
+				<File
 					RelativePath=".\MTLogo.cpp"
 					>
 				</File>
@@ -499,11 +507,35 @@
 					>
 				</File>
 				<File
+					RelativePath=".\MTNoteBoxMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTNoteBoxMod.h"
+					>
+				</File>
+				<File
 					RelativePath=".\MTNoteDesign.cpp"
 					>
 				</File>
 				<File
 					RelativePath=".\MTNoteDesign.h"
+					>
+				</File>
+				<File
+					RelativePath=".\MTNoteDesignMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTNoteDesignMod.h"
+					>
+				</File>
+				<File
+					RelativePath=".\MTNoteLyrics.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTNoteLyrics.h"
 					>
 				</File>
 				<File
@@ -531,6 +563,14 @@
 					>
 				</File>
 				<File
+					RelativePath=".\MTNoteRippleMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTNoteRippleMod.h"
+					>
+				</File>
+				<File
 					RelativePath=".\MTPianoKeyboard.cpp"
 					>
 				</File>
@@ -555,11 +595,35 @@
 					>
 				</File>
 				<File
+					RelativePath=".\MTPianoKeyboardCtrlMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTPianoKeyboardCtrlMod.h"
+					>
+				</File>
+				<File
 					RelativePath=".\MTPianoKeyboardDesign.cpp"
 					>
 				</File>
 				<File
 					RelativePath=".\MTPianoKeyboardDesign.h"
+					>
+				</File>
+				<File
+					RelativePath=".\MTPianoKeyboardDesignMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTPianoKeyboardDesignMod.h"
+					>
+				</File>
+				<File
+					RelativePath=".\MTPianoKeyboardMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTPianoKeyboardMod.h"
 					>
 				</File>
 				<File
@@ -615,6 +679,14 @@
 					>
 				</File>
 				<File
+					RelativePath=".\MTScenePianoRoll2DMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTScenePianoRoll2DMod.h"
+					>
+				</File>
+				<File
 					RelativePath=".\MTScenePianoRoll3D.cpp"
 					>
 				</File>
@@ -628,6 +700,14 @@
 				</File>
 				<File
 					RelativePath=".\MTScenePianoRoll3DLive.h"
+					>
+				</File>
+				<File
+					RelativePath=".\MTScenePianoRoll3DMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTScenePianoRoll3DMod.h"
 					>
 				</File>
 				<File
