--- a/MIDITrail/MIDITrail.rc
+++ b/MIDITrail/MIDITrail.rc
@@ -70,11 +70,12 @@ BEGIN
         MENUITEM "Piano Roll Rain",             IDM_VIEW_PIANOROLLRAIN
         MENUITEM "Piano Roll Rain 2D",          IDM_VIEW_PIANOROLLRAIN2D
         MENUITEM SEPARATOR
-        MENUITEM "Piano keyboard",              IDM_ENABLE_PIANOKEYBOARD
+        MENUITEM "Piano Keyboard",              IDM_ENABLE_PIANOKEYBOARD
         MENUITEM "Ripple",                      IDM_ENABLE_RIPPLE
         MENUITEM "Pitch Bend Motion",           IDM_ENABLE_PITCHBEND
         MENUITEM "Stars",                       IDM_ENABLE_STARS
         MENUITEM "Counter",                     IDM_ENABLE_COUNTER
+        MENUITEM "Background Image",            IDM_ENABLE_BACKGROUNDIMAGE
         MENUITEM SEPARATOR
         MENUITEM "Auto save viewpoint",         32838
         MENUITEM SEPARATOR
@@ -151,15 +152,20 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,228,198,50,14
 END
 
-IDD_WINDOWSIZE_CFG DIALOGEX 0, 0, 160, 183
+IDD_WINDOWSIZE_CFG DIALOGEX 0, 0, 256, 183
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Window size configuration"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LISTBOX         IDC_WINDOWSIZE_LIST,12,18,138,138,LBS_NOINTEGRALHEIGHT | LBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
-    DEFPUSHBUTTON   "OK",IDOK,42,162,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,96,162,50,14
     LTEXT           "Window size",IDC_STATIC,12,6,84,8
+    LISTBOX         IDC_WINDOWSIZE_LIST,12,18,96,138,LBS_NOINTEGRALHEIGHT | LBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Width",IDC_STATIC,126,24,48,8
+    EDITTEXT        IDC_EDIT_WIDTH,126,36,48,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Height",IDC_STATIC,186,24,48,8
+    EDITTEXT        IDC_EDIT_HEIGHT,186,36,48,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Apply to the view area",IDC_CHECK_APPLY_TO_VIEW,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,126,66,120,10
+    DEFPUSHBUTTON   "OK",IDOK,138,162,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,192,162,50,14
 END
 
 IDD_HOWTOVIEW DIALOGEX 0, 0, 412, 291
@@ -175,15 +181,18 @@ BEGIN
     PUSHBUTTON      "Close",IDC_BTN_CLOSE,346,267,54,14
 END
 
-IDD_GRAPHIC_CFG DIALOGEX 0, 0, 178, 75
+IDD_GRAPHIC_CFG DIALOGEX 0, 0, 280, 111
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Graphic configuration"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,60,54,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,114,54,50,14
     LTEXT           "Anti-aliasing",IDC_STATIC,18,20,54,8
     COMBOBOX        IDC_COMBO_MULTISAMPLETYPE,72,18,78,54,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Background image file path",IDC_STATIC,18,42,126,8
+    EDITTEXT        IDC_EDIT_IMAGE_FILE_PATH,18,54,222,12,ES_AUTOHSCROLL
+    PUSHBUTTON      "...",IDC_BTN_BROWSE,240,53,25,14
+    DEFPUSHBUTTON   "OK",IDOK,162,84,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,216,84,50,14
 END
 
 IDD_MIDIIN_CFG DIALOGEX 0, 0, 304, 99
@@ -227,7 +236,7 @@ BEGIN
     IDD_WINDOWSIZE_CFG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 153
+        RIGHTMARGIN, 249
         TOPMARGIN, 7
         BOTTOMMARGIN, 176
     END
@@ -243,9 +252,9 @@ BEGIN
     IDD_GRAPHIC_CFG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 171
+        RIGHTMARGIN, 273
         TOPMARGIN, 7
-        BOTTOMMARGIN, 68
+        BOTTOMMARGIN, 104
     END
 
     IDD_MIDIIN_CFG, DIALOG
