--- a/MIDITrail/MIDITrail.vcproj
+++ b/MIDITrail/MIDITrail.vcproj
@@ -475,6 +475,14 @@
 					>
 				</File>
 				<File
+					RelativePath=".\MTGridBoxMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTGridBoxMod.h"
+					>
+				</File>
+				<File
 					RelativePath=".\MTLogo.cpp"
 					>
 				</File>
@@ -507,11 +515,35 @@
 					>
 				</File>
 				<File
+					RelativePath=".\MTNoteBoxMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTNoteBoxMod.h"
+					>
+				</File>
+				<File
 					RelativePath=".\MTNoteDesign.cpp"
 					>
 				</File>
 				<File
 					RelativePath=".\MTNoteDesign.h"
+					>
+				</File>
+				<File
+					RelativePath=".\MTNoteDesignMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTNoteDesignMod.h"
+					>
+				</File>
+				<File
+					RelativePath=".\MTNoteLyrics.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTNoteLyrics.h"
 					>
 				</File>
 				<File
@@ -539,6 +571,14 @@
 					>
 				</File>
 				<File
+					RelativePath=".\MTNoteRippleMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTNoteRippleMod.h"
+					>
+				</File>
+				<File
 					RelativePath=".\MTPianoKeyboard.cpp"
 					>
 				</File>
@@ -563,11 +603,35 @@
 					>
 				</File>
 				<File
+					RelativePath=".\MTPianoKeyboardCtrlMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTPianoKeyboardCtrlMod.h"
+					>
+				</File>
+				<File
 					RelativePath=".\MTPianoKeyboardDesign.cpp"
 					>
 				</File>
 				<File
 					RelativePath=".\MTPianoKeyboardDesign.h"
+					>
+				</File>
+				<File
+					RelativePath=".\MTPianoKeyboardDesignMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTPianoKeyboardDesignMod.h"
+					>
+				</File>
+				<File
+					RelativePath=".\MTPianoKeyboardMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTPianoKeyboardMod.h"
 					>
 				</File>
 				<File
@@ -623,6 +687,14 @@
 					>
 				</File>
 				<File
+					RelativePath=".\MTScenePianoRoll2DMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTScenePianoRoll2DMod.h"
+					>
+				</File>
+				<File
 					RelativePath=".\MTScenePianoRoll3D.cpp"
 					>
 				</File>
@@ -636,6 +708,14 @@
 				</File>
 				<File
 					RelativePath=".\MTScenePianoRoll3DLive.h"
+					>
+				</File>
+				<File
+					RelativePath=".\MTScenePianoRoll3DMod.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\MTScenePianoRoll3DMod.h"
 					>
 				</File>
 				<File
