--- a/MIDITrail/MIDITrail.rc
+++ b/MIDITrail/MIDITrail.rc
@@ -77,10 +77,9 @@ BEGIN
         MENUITEM "Counter",                     IDM_ENABLE_COUNTER
         MENUITEM "Background Image",            IDM_ENABLE_BACKGROUNDIMAGE
         MENUITEM SEPARATOR
-        MENUITEM "Auto save viewpoint",         32838
-        MENUITEM SEPARATOR
-        MENUITEM "Reset viewpoint",             IDM_RESET_VIEWPOINT
-        MENUITEM "Save viewpoint",              IDM_SAVE_VIEWPOINT
+        MENUITEM "Viewpoint 1\t7",              IDM_RESET_VIEWPOINT
+        MENUITEM "Viewpoint 2\t8",              IDM_VIEWPOINT2
+        MENUITEM "Viewpoint 3\t9",              IDM_VIEWPOINT3
         MENUITEM SEPARATOR
         MENUITEM "Window size...",              IDM_WINDOWSIZE
     END
