[UPDATE] original 1.2.4をマージ

--- a/MIDITrail/template/conf/PianoRoll2D.ini
+++ b/MIDITrail/template/conf/PianoRoll2D.ini
@@ -12,7 +12,7 @@ QuarterNoteLength=1.0
 NoteBoxHeight=0.1
 NoteBoxWidth=0.0
 NoteStep=0.1
-ChStep=0.0
+ChStep=0.001
 RippleHeight=1.0
 RippleWidth=1.0
 PictBoardRelativePos=1.0
@@ -77,6 +77,30 @@ NumberOfStars=2000
 [Bitmap]
 Board=data\Board.png
 Ripple=data\Ripple2.png
+
+#[Mesh]
+#XFile=mesh\model.x
+#PositionX=0.0
+#PositionY=0.0
+#PositionZ=0.0
+
+[Viewpoint-2]
+X=-12.6
+Y=10.0
+Z=-12.8
+Phi=35.0
+Theta=101.0
+ManualRollAngle=0.0
+AutoRollVelocity=0.0
+
+[Viewpoint-3]
+X=12.6
+Y=10.0
+Z=-12.8
+Phi=145.0
+Theta=101.0
+ManualRollAngle=0.0
+AutoRollVelocity=0.0
 
 [PianoKeyboard]
 KeyDownDuration=40
