--- a/MIDITrail/template/conf/PianoRoll2DLive.ini
+++ b/MIDITrail/template/conf/PianoRoll2DLive.ini
@@ -12,10 +12,10 @@ QuarterNoteLength=1.0
 NoteBoxHeight=0.1
 NoteBoxWidth=0.0
 NoteStep=0.1
-ChStep=0.0
+ChStep=0.001
 RippleHeight=1.0
 RippleWidth=1.0
-PictBoardRelativePos=1.0
+PictBoardRelativePos=0.0
 LiveNoteLengthPerSecond=2.0
 LiveMonitorDisplayDuration=30000
 
@@ -74,4 +74,22 @@ Ripple=data\Ripple.png
 #PositionX=0.0
 #PositionY=0.0
 #PositionZ=0.0
+
+[Viewpoint-2]
+X=-19.3
+Y=10.0
+Z=-14.1
+Phi=55.7
+Theta=101.7
+ManualRollAngle=0.0
+AutoRollVelocity=0.0
+
+[Viewpoint-3]
+X=10.0
+Y=10.0
+Z=-14.1
+Phi=145.0
+Theta=101.7
+ManualRollAngle=0.0
+AutoRollVelocity=0.0
 
