--- a/MIDITrail/template/conf/PianoRoll3DLive.ini
+++ b/MIDITrail/template/conf/PianoRoll3DLive.ini
@@ -75,3 +75,21 @@ Ripple=data\Ripple.png
 #PositionY=0.0
 #PositionZ=0.0
 
+[Viewpoint-2]
+X=-15.4
+Y=10.0
+Z=-8.7
+Phi=52.0
+Theta=101.0
+ManualRollAngle=0.0
+AutoRollVelocity=0.0
+
+[Viewpoint-3]
+X=11.4
+Y=10.0
+Z=-12.0
+Phi=145.0
+Theta=101.0
+ManualRollAngle=0.0
+AutoRollVelocity=0.0
+
