--- a/MIDITrail/template/conf/PianoRoll3D.ini
+++ b/MIDITrail/template/conf/PianoRoll3D.ini
@@ -79,6 +79,30 @@ Board=data\Board.png
 Ripple=data\Ripple2.png
 Keyboard=data\Keyboard.png
 
+#[Mesh]
+#XFile=mesh\model.x
+#PositionX=0.0
+#PositionY=0.0
+#PositionZ=0.0
+
+[Viewpoint-2]
+X=-14.0
+Y=10.0
+Z=-7.0
+Phi=35.0
+Theta=101.7
+ManualRollAngle=0.0
+AutoRollVelocity=0.0
+
+[Viewpoint-3]
+X=14.0
+Y=10.0
+Z=-7.0
+Phi=145.0
+Theta=101.7
+ManualRollAngle=0.0
+AutoRollVelocity=0.0
+
 [PianoKeyboard]
 KeyDownDuration=40
 KeyUpDuration=40
