--- a/MIDITrail/template/conf/PianoRollRain2DLive.ini
+++ b/MIDITrail/template/conf/PianoRollRain2DLive.ini
@@ -91,3 +91,21 @@ KeyDispRangeEnd=127
 #PositionY=0.0
 #PositionZ=0.0
 
+[Viewpoint-2]
+X=6.8
+Y=6.0
+Z=-9.0
+Phi=115.0
+Theta=109.0
+ManualRollAngle=0.0
+AutoRollVelocity=0.0
+
+[Viewpoint-3]
+X=-6.8
+Y=6.0
+Z=-9.0
+Phi=65.0
+Theta=109.0
+ManualRollAngle=0.0
+AutoRollVelocity=0.0
+
