--- a/MIDITrail/template/conf/PianoRollRainLive.ini
+++ b/MIDITrail/template/conf/PianoRollRainLive.ini
@@ -91,3 +91,21 @@ KeyDispRangeEnd=127
 #PositionY=0.0
 #PositionZ=0.0
 
+[Viewpoint-2]
+X=6.0
+Y=3.6
+Z=-18.8
+Phi=113.0
+Theta=112.0
+ManualRollAngle=0.0
+AutoRollVelocity=0.0
+
+[Viewpoint-3]
+X=-6.0
+Y=3.6
+Z=-18.8
+Phi=67.0
+Theta=112.0
+ManualRollAngle=0.0
+AutoRollVelocity=0.0
+
