--- a/MIDITrail/MIDITrail.vcxproj
+++ b/MIDITrail/MIDITrail.vcxproj
@@ -221,6 +221,7 @@
     <ClCompile Include="MTGraphicCfgDlg.cpp" />
     <ClCompile Include="MTGridBox.cpp" />
     <ClCompile Include="MTGridBoxLive.cpp" />
+    <ClCompile Include="MTGridBoxMod.cpp" />
     <ClCompile Include="MTHowToViewDlg.cpp" />
     <ClCompile Include="MTLogo.cpp" />
     <ClCompile Include="MTMeshCtrl.cpp" />
@@ -228,21 +229,30 @@
     <ClCompile Include="MTMIDIOUTCfgDlg.cpp" />
     <ClCompile Include="MTNoteBox.cpp" />
     <ClCompile Include="MTNoteBoxLive.cpp" />
+    <ClCompile Include="MTNoteBoxMod.cpp" />
     <ClCompile Include="MTNoteDesign.cpp" />
+    <ClCompile Include="MTNoteDesignMod.cpp" />
+    <ClCompile Include="MTNoteLyrics.cpp" />
     <ClCompile Include="MTNotePitchBend.cpp" />
     <ClCompile Include="MTNoteRain.cpp" />
     <ClCompile Include="MTNoteRainLive.cpp" />
     <ClCompile Include="MTNoteRipple.cpp" />
+    <ClCompile Include="MTNoteRippleMod.cpp" />
     <ClCompile Include="MTPianoKeyboard.cpp" />
     <ClCompile Include="MTPianoKeyboardCtrl.cpp" />
     <ClCompile Include="MTPianoKeyboardCtrlLive.cpp" />
+    <ClCompile Include="MTPianoKeyboardCtrlMod.cpp" />
     <ClCompile Include="MTPianoKeyboardDesign.cpp" />
+    <ClCompile Include="MTPianoKeyboardDesignMod.cpp" />
+    <ClCompile Include="MTPianoKeyboardMod.cpp" />
     <ClCompile Include="MTPictBoard.cpp" />
     <ClCompile Include="MTScene.cpp" />
     <ClCompile Include="MTScenePianoRoll2D.cpp" />
     <ClCompile Include="MTScenePianoRoll2DLive.cpp" />
+    <ClCompile Include="MTScenePianoRoll2DMod.cpp" />
     <ClCompile Include="MTScenePianoRoll3D.cpp" />
     <ClCompile Include="MTScenePianoRoll3DLive.cpp" />
+    <ClCompile Include="MTScenePianoRoll3DMod.cpp" />
     <ClCompile Include="MTScenePianoRollRain.cpp" />
     <ClCompile Include="MTScenePianoRollRain2D.cpp" />
     <ClCompile Include="MTScenePianoRollRain2DLive.cpp" />
@@ -285,6 +295,7 @@
     <ClInclude Include="MTGraphicCfgDlg.h" />
     <ClInclude Include="MTGridBox.h" />
     <ClInclude Include="MTGridBoxLive.h" />
+    <ClInclude Include="MTGridBoxMod.h" />
     <ClInclude Include="MTHowToViewDlg.h" />
     <ClInclude Include="MTLogo.h" />
     <ClInclude Include="MTMeshCtrl.h" />
@@ -292,22 +303,31 @@
     <ClInclude Include="MTMIDIOUTCfgDlg.h" />
     <ClInclude Include="MTNoteBox.h" />
     <ClInclude Include="MTNoteBoxLive.h" />
+    <ClInclude Include="MTNoteBoxMod.h" />
     <ClInclude Include="MTNoteDesign.h" />
+    <ClInclude Include="MTNoteDesignMod.h" />
+    <ClInclude Include="MTNoteLyrics.h" />
     <ClInclude Include="MTNotePitchBend.h" />
     <ClInclude Include="MTNoteRain.h" />
     <ClInclude Include="MTNoteRainLive.h" />
     <ClInclude Include="MTNoteRipple.h" />
+    <ClInclude Include="MTNoteRippleMod.h" />
     <ClInclude Include="MTParam.h" />
     <ClInclude Include="MTPianoKeyboard.h" />
     <ClInclude Include="MTPianoKeyboardCtrl.h" />
     <ClInclude Include="MTPianoKeyboardCtrlLive.h" />
+    <ClInclude Include="MTPianoKeyboardCtrlMod.h" />
     <ClInclude Include="MTPianoKeyboardDesign.h" />
+    <ClInclude Include="MTPianoKeyboardDesignMod.h" />
+    <ClInclude Include="MTPianoKeyboardMod.h" />
     <ClInclude Include="MTPictBoard.h" />
     <ClInclude Include="MTScene.h" />
     <ClInclude Include="MTScenePianoRoll2D.h" />
     <ClInclude Include="MTScenePianoRoll2DLive.h" />
+    <ClInclude Include="MTScenePianoRoll2DMod.h" />
     <ClInclude Include="MTScenePianoRoll3D.h" />
     <ClInclude Include="MTScenePianoRoll3DLive.h" />
+    <ClInclude Include="MTScenePianoRoll3DMod.h" />
     <ClInclude Include="MTScenePianoRollRain.h" />
     <ClInclude Include="MTScenePianoRollRain2D.h" />
     <ClInclude Include="MTScenePianoRollRain2DLive.h" />
