--- a/MIDITrail/MIDITrail.vcxproj
+++ b/MIDITrail/MIDITrail.vcxproj
@@ -202,6 +202,7 @@
     <ClCompile Include="DXCamera.cpp" />
     <ClCompile Include="DXColorUtil.cpp" />
     <ClCompile Include="DXDirLight.cpp" />
+    <ClCompile Include="DXH.cpp" />
     <ClCompile Include="DXMesh.cpp" />
     <ClCompile Include="DXPrimitive.cpp" />
     <ClCompile Include="DXRenderer.cpp" />
@@ -222,6 +223,8 @@
     <ClCompile Include="MTGraphicCfgDlg.cpp" />
     <ClCompile Include="MTGridBox.cpp" />
     <ClCompile Include="MTGridBoxLive.cpp" />
+    <ClCompile Include="MTGridRing.cpp" />
+    <ClCompile Include="MTGridRingLive.cpp" />
     <ClCompile Include="MTHowToViewDlg.cpp" />
     <ClCompile Include="MTLogo.cpp" />
     <ClCompile Include="MTMeshCtrl.cpp" />
@@ -229,16 +232,21 @@
     <ClCompile Include="MTMIDIOUTCfgDlg.cpp" />
     <ClCompile Include="MTNoteBox.cpp" />
     <ClCompile Include="MTNoteBoxLive.cpp" />
+    <ClCompile Include="MTNoteBoxRing.cpp" />
+    <ClCompile Include="MTNoteBoxRingLive.cpp" />
     <ClCompile Include="MTNoteDesign.cpp" />
+    <ClCompile Include="MTNoteDesignRing.cpp" />
     <ClCompile Include="MTNotePitchBend.cpp" />
     <ClCompile Include="MTNoteRain.cpp" />
     <ClCompile Include="MTNoteRainLive.cpp" />
     <ClCompile Include="MTNoteRipple.cpp" />
+    <ClCompile Include="MTNoteRippleRing.cpp" />
     <ClCompile Include="MTPianoKeyboard.cpp" />
     <ClCompile Include="MTPianoKeyboardCtrl.cpp" />
     <ClCompile Include="MTPianoKeyboardCtrlLive.cpp" />
     <ClCompile Include="MTPianoKeyboardDesign.cpp" />
     <ClCompile Include="MTPictBoard.cpp" />
+    <ClCompile Include="MTPictBoardRing.cpp" />
     <ClCompile Include="MTScene.cpp" />
     <ClCompile Include="MTScenePianoRoll2D.cpp" />
     <ClCompile Include="MTScenePianoRoll2DLive.cpp" />
@@ -248,10 +256,13 @@
     <ClCompile Include="MTScenePianoRollRain2D.cpp" />
     <ClCompile Include="MTScenePianoRollRain2DLive.cpp" />
     <ClCompile Include="MTScenePianoRollRainLive.cpp" />
+    <ClCompile Include="MTScenePianoRollRing.cpp" />
+    <ClCompile Include="MTScenePianoRollRingLive.cpp" />
     <ClCompile Include="MTSceneTitle.cpp" />
     <ClCompile Include="MTStars.cpp" />
     <ClCompile Include="MTStaticCaption.cpp" />
     <ClCompile Include="MTTimeIndicator.cpp" />
+    <ClCompile Include="MTTimeIndicatorRing.cpp" />
     <ClCompile Include="MTWindowSizeCfgDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -266,6 +277,7 @@
     <ClInclude Include="DXCamera.h" />
     <ClInclude Include="DXColorUtil.h" />
     <ClInclude Include="DXDirLight.h" />
+    <ClInclude Include="DXH.h" />
     <ClInclude Include="DXMesh.h" />
     <ClInclude Include="DXPrimitive.h" />
     <ClInclude Include="DXRenderer.h" />
@@ -287,6 +299,8 @@
     <ClInclude Include="MTGraphicCfgDlg.h" />
     <ClInclude Include="MTGridBox.h" />
     <ClInclude Include="MTGridBoxLive.h" />
+    <ClInclude Include="MTGridRing.h" />
+    <ClInclude Include="MTGridRingLive.h" />
     <ClInclude Include="MTHowToViewDlg.h" />
     <ClInclude Include="MTLogo.h" />
     <ClInclude Include="MTMeshCtrl.h" />
@@ -294,17 +308,22 @@
     <ClInclude Include="MTMIDIOUTCfgDlg.h" />
     <ClInclude Include="MTNoteBox.h" />
     <ClInclude Include="MTNoteBoxLive.h" />
+    <ClInclude Include="MTNoteBoxRing.h" />
+    <ClInclude Include="MTNoteBoxRingLive.h" />
     <ClInclude Include="MTNoteDesign.h" />
+    <ClInclude Include="MTNoteDesignRing.h" />
     <ClInclude Include="MTNotePitchBend.h" />
     <ClInclude Include="MTNoteRain.h" />
     <ClInclude Include="MTNoteRainLive.h" />
     <ClInclude Include="MTNoteRipple.h" />
+    <ClInclude Include="MTNoteRippleRing.h" />
     <ClInclude Include="MTParam.h" />
     <ClInclude Include="MTPianoKeyboard.h" />
     <ClInclude Include="MTPianoKeyboardCtrl.h" />
     <ClInclude Include="MTPianoKeyboardCtrlLive.h" />
     <ClInclude Include="MTPianoKeyboardDesign.h" />
     <ClInclude Include="MTPictBoard.h" />
+    <ClInclude Include="MTPictBoardRing.h" />
     <ClInclude Include="MTScene.h" />
     <ClInclude Include="MTScenePianoRoll2D.h" />
     <ClInclude Include="MTScenePianoRoll2DLive.h" />
@@ -314,10 +333,13 @@
     <ClInclude Include="MTScenePianoRollRain2D.h" />
     <ClInclude Include="MTScenePianoRollRain2DLive.h" />
     <ClInclude Include="MTScenePianoRollRainLive.h" />
+    <ClInclude Include="MTScenePianoRollRing.h" />
+    <ClInclude Include="MTScenePianoRollRingLive.h" />
     <ClInclude Include="MTSceneTitle.h" />
     <ClInclude Include="MTStars.h" />
     <ClInclude Include="MTStaticCaption.h" />
     <ClInclude Include="MTTimeIndicator.h" />
+    <ClInclude Include="MTTimeIndicatorRing.h" />
     <ClInclude Include="MTWindowSizeCfgDlg.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
