--- a/Resources/conf/PianoRollRingLive.ini
+++ b/Resources/conf/PianoRollRingLive.ini
@@ -1,23 +1,24 @@
 [FirstPersonCam]
-VelocityFB=10.0
-VelocityLR=10.0
-VelocityUD=5.0
+VelocityFB=15.0
+VelocityLR=15.0
+VelocityUD=10.0
 VelocityPT=6.0
 AcceleRate=2.0
 VelocityAutoRoll=6.0
 VelocityManualRoll=1.0
 
 [Scale]
-QuarterNoteLength=1.0
+QuarterNoteLength=2.0
 NoteBoxHeight=0.1
-NoteBoxWidth=0.1
+NoteBoxWidth=0.0
 NoteStep=0.1
-ChStep=0.5
+ChStep=0.001
 RippleHeight=1.0
 RippleWidth=1.0
-PictBoardRelativePos=1.0
+PictBoardRelativePos=0.0
 LiveNoteLengthPerSecond=2.0
 LiveMonitorDisplayDuration=30000
+RingRadius=4.0
 
 [Color]
 NoteColorType=CHANNEL
@@ -58,7 +59,6 @@ BackGroundRGB=000000
 Duration=400
 WhiteRate=0.9
 EmissiveRGBA=1A1A1A1A
-SizeRatio=1.4
 
 [Ripple]
 Duration=1600
@@ -69,22 +69,6 @@ NumberOfStars=2000
 [Bitmap]
 Board=data\Board.png
 Ripple=data\Ripple.png
-Keyboard=data\Keyboard.png
-
-[PianoKeyboard]
-KeyDownDuration=40
-KeyUpDuration=40
-KeyboardStepY=0
-KeyboardStepZ=0.001
-KeyboardMaxDispNum=1
-WhiteKeyColor=FFFFFFFF
-BlackKeyColor=FFFFFFFF
-ActiveKeyColorType=NOTE
-ActiveKeyColor=FF0000FF
-ActiveKeyColorDuration=400
-ActiveKeyColorTailRate=0.3
-KeyDispRangeStart=0
-KeyDispRangeEnd=127
 
 #[Mesh]
 #XFile=mesh\model.x
@@ -93,20 +77,21 @@ KeyDispRangeEnd=127
 #PositionZ=0.0
 
 [Viewpoint-2]
-X=6.8
-Y=6.0
-Z=-9.0
-Phi=115.0
-Theta=109.0
+X=11.0
+Y=3.8
+Z=6.6
+Phi=206.5
+Theta=107.0
 ManualRollAngle=0.0
 AutoRollVelocity=0.0
 
 [Viewpoint-3]
-X=-6.8
-Y=6.0
-Z=-9.0
-Phi=65.0
-Theta=109.0
+X=-13.0
+Y=0.0
+Z=0.0
+Phi=0.0
+Theta=90.0
 ManualRollAngle=0.0
 AutoRollVelocity=0.0
+
 
