--- a/Resources/conf/PianoRollRing.ini
+++ b/Resources/conf/PianoRollRing.ini
@@ -62,14 +62,23 @@ EmissiveRGBA=1A1A1A1A
 SizeRatio=1.4
 
 [Ripple]
-Duration=1600
+;Duration=1600
+DecayDuration=100
+ReleaseDuration=250
+;-- D3dBlendType : ZERO=1, ONE=2, SRCALPHA=5, INVSRCALPHA=6, DESTALPHA=7, INVDESTALPHA=8
+SrcBlend=5
+DestBlend=2
+OverwriteTimes=3
+;-- e.g.) BlackBG : Src/Dest/Overwrite = 5/2/3, PictureBG : Src/Dest/Overwrite = 5/2/1
+Spacing=0.002
 
 [Stars]
 NumberOfStars=2000
 
 [Bitmap]
 Board=data\Board.png
-Ripple=data\Ripple.png
+Ripple=data\Ripple2.png
+;Keyboard=data\Keyboard.png
 
 #[Mesh]
 #XFile=mesh\model.x
@@ -95,3 +104,33 @@ Theta=90.0
 ManualRollAngle=0.0
 AutoRollVelocity=0.0
 
+;[PianoKeyboard]
+;KeyDownDuration=40
+;KeyUpDuration=40
+;KeyboardStepY=0.34
+;KeyboardStepZ=1.5
+;KeyboardMaxDispNum=16
+;WhiteKeyColor=FFFFFFDD
+;BlackKeyColor=FFFFFFDD
+;ActiveKeyColorType=STANDARD
+;;ActiveKeyColor=FF0000FF
+;Ch-01-ActiveKeyColor=E61A1AEE
+;Ch-02-ActiveKeyColor=1FFF01EE
+;Ch-03-ActiveKeyColor=013DFFEE
+;Ch-04-ActiveKeyColor=FF6101EE
+;Ch-05-ActiveKeyColor=01FF43EE
+;Ch-06-ActiveKeyColor=2501FFEE
+;Ch-07-ActiveKeyColor=FFC001EE
+;Ch-08-ActiveKeyColor=01FFA2EE
+;Ch-09-ActiveKeyColor=7F01FFEE
+;Ch-10-ActiveKeyColor=DEFF01EE
+;Ch-11-ActiveKeyColor=01FCFFEE
+;Ch-12-ActiveKeyColor=DE01FFEE
+;Ch-13-ActiveKeyColor=7FFF01EE
+;Ch-14-ActiveKeyColor=019DFFEE
+;Ch-15-ActiveKeyColor=FF01C0EE
+;Ch-16-ActiveKeyColor=FF0161EE
+;ActiveKeyColorDuration=400
+;ActiveKeyColorTailRate=0.5
+;KeyDispRangeStart=0
+;KeyDispRangeEnd=127
